add cateogry api, and add some query paramter to course api
