# app/routes/api/api-v0.0.1/public.js
@@ -3,6 +3,8 @@ const router = express.Router();
 
 // Controllers
 const courseController = require('app/http/controllers/api/v0.0.1/courseController');
+const categoryController = require('app/http/controllers/api/v0.0.1/categoryController');
+
 const authController = require('app/http/controllers/api/v0.0.1/authController');
 
 //validator 
@@ -13,7 +15,7 @@ router.get('/courses' , courseController.courses);
 router.get('/courses/:course' , courseController.singleCourse);
 router.get('/courses/:course/comments' , courseController.commentForSingleCourse);
 
-
+router.get('/categories' , categoryController.categories);
 
 router.post('/user/login' , loginValidator.handle() , authController.login);
 router.post('/user/register' , registerValidator.handle() , authController.register);
